<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/burak_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_margin_low"
        android:background="@color/burak_selection_background"
        >

        <TextView
            style="@style/title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="@dimen/vertical_margin_low"
            android:gravity="center"
            android:text="@string/settings_page"
            android:textColor="@color/classic_black"
            android:textSize="18sp" />


        <ImageView
            android:id="@+id/cancel_mark_settings"
            android:layout_width="wrap_content"
            android:padding="@dimen/vertical_margin_low"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:clickable="true"
            android:src="@drawable/back_arrow"
            android:focusable="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/activity_vertical_margin" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:paddingTop="@dimen/vertical_margin_low"
        android:paddingBottom="@dimen/vertical_margin_low"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                style="@style/main_page_textview_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vibration_setting" />

            <TextView
                style="@style/main_page_sub_textview_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vibration_text" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="visible">

            <CheckBox
                android:id="@+id/user_vibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/vertical_margin_low"
                android:buttonTint="@color/burak_mektup_gri"
                android:checked="true" />

        </RelativeLayout>
    </LinearLayout>

    <View
        style="@style/horizontal_line"
  />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/vertical_margin_low"
        android:paddingBottom="@dimen/vertical_margin_low"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instructions"
            style="@style/activity_profile_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:gravity="center_vertical"
            android:text="@string/scoring_info"
            android:textColor="@color/classic_black"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/instructions_text"
            style="@style/activity_profile_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:gravity="center_vertical"
            android:text="@string/instructions_text"
            android:textColor="@color/light_black"
            android:textSize="14sp"
            android:textStyle="normal" />


    </LinearLayout>

    <View
        style="@style/horizontal_line"
       />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/vertical_margin_low"
        android:paddingBottom="@dimen/vertical_margin_low"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                style="@style/main_page_textview_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/comments_requests_title" />

            <TextView
                style="@style/main_page_sub_textview_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="web"
                android:paddingRight="@dimen/vertical_margin_low"
                android:text="@string/comments_requests_text" />
        </LinearLayout>

        <ImageView
            android:id="@+id/floating_email_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:src="@drawable/selector_sendemail" />

    </LinearLayout>

    <View
        style="@style/horizontal_line"
      />


</LinearLayout>