<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/burak_background"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:id="@+id/summary"
        style="@style/summary_page_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/summary_page_title"
        android:textAllCaps="true"
        android:textColor="@color/classic_black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/summary_after_fifteen"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/profilefirst_button"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/level_tag"
                style="@style/summary_page_text_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/level" />

            <TextView
                android:id="@+id/summary_level"
                style="@style/numbers_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/profilefirst_button"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/earned_score_tag"
                style="@style/summary_page_text_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/earned_score" />

            <TextView
                android:id="@+id/highest_score"
                style="@style/numbers_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="17" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/profilefirst_button"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total_score_tag"
                style="@style/summary_page_text_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/highest_score" />

            <TextView
                android:id="@+id/total_score"
                style="@style/numbers_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="0"
                android:textColor="@color/classic_white" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/profilefirst_button"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/correct_answer_tag"
                style="@style/summary_page_text_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/correct_answer_count" />

            <TextView
                android:id="@+id/correct_answer_count"
                style="@style/numbers_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="2"
                android:textColor="@color/classic_white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/profilefirst_button"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/average_time_tag"
                style="@style/summary_page_text_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/average_time" />

            <com.englishvocabularygame.evog.AutoResizeTextView
                android:id="@+id/average_time"
                style="@style/numbers_style"
                android:layout_width="0dp"
                android:lines="1"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="3.60 s" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/profilefirst_button"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wrong_answer_tag"
                style="@style/summary_page_text_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/wrong_answer_count" />

            <TextView
                android:id="@+id/wrong_answer"
                style="@style/numbers_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="17"
                android:textColor="@color/classic_white" />

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/to_home_button"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_homebutton"
                android:gravity="center"
                android:onClick="returnHome"
                app:layout_constraintLeft_toRightOf="@+id/detailed_results" />

            <Button
                android:id="@+id/detailed_results"
                app:layout_constraintRight_toLeftOf="@+id/to_home_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background="@drawable/selector_detailsbutton"
                android:onClick="startDetailedResults"
                android:typeface="normal"
       />


        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</LinearLayout>