<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listview_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/rectangle"
       >


        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.02"
            android:background="@color/burak_background" />


        <com.englishvocabularygame.evog.AutoResizeTextView
            android:id="@+id/question_summary_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/asked_question"
            android:textColor="@color/classic_white"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.02"
            android:background="@color/burak_background" />


        <com.englishvocabularygame.evog.AutoResizeTextView
            android:id="@+id/user_answer_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/user_answer"
            android:textColor="@color/classic_white"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.02"
            android:background="@color/burak_background" />




        <com.englishvocabularygame.evog.AutoResizeTextView
            android:id="@+id/correct_answer_summary_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/summary_correct_answers"
            android:textColor="@color/classic_white"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.02"
            android:background="@color/burak_background" />



    </LinearLayout>


    <ListView
        android:id="@+id/summary_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/burak_summary_color"
        android:dividerHeight="1dp"
        android:orientation="vertical"
         />

</LinearLayout>